lab-language-modeling.ipynb: fixed typo in Q5 and added answer to Q13

--- a/TP1/lab-language-modeling.ipynb
+++ b/TP1/lab-language-modeling.ipynb
@@ -1020,7 +1020,7 @@
    "source": [
     "**Cell I Q5: Why does this throw an error?**\n",
     "\n",
-    "Looking at the assertion message and at the \"dev\" dataset, we understand that we are trying to compute the following probability: P(\"was\"|\"box\", \"a\", \"hoped\", \"liam\", \"<bos>\").\n",
+    "Looking at the assertion message and at the \"dev\" dataset, we understand that we are trying to compute the following probability: P(\"was\"|\"box\", \"a\", \"hoped\", \"liam\", \"\\<bos\\>\").\n",
     "However, the 5-gram \"box a hoped liam \\<bos\\>\" does not appear in the training data. The model has never seen this 5-gram (the assertion checks if the history has been seen at least once in the training data). Therefore, the model cannot compute the requested probability.\n",
     "\n",
     "To confirm this, we can check the training data to see if the 5-gram \"box a hoped liam \\<bos\\>\" appears in the training data.\n",
@@ -1772,7 +1772,9 @@
    "id": "ef1726d1",
    "metadata": {},
    "source": [
-    "**Cell Q Q13: What else could we have done to further push the dev loss down?**\n"
+    "**Cell Q Q13: What else could we have done to further push the dev loss down?**\n",
+    "\n",
+    "Another possible improvement would have been to use more complex embeddings, such as pre-trained embeddings (e.g. GloVe, Word2Vec, etc.).\n"
    ]
   },
   {
