lab-language-modeling.ipynb: corrected phrasing in Q2, Q9, and Q15

--- a/TP1/lab-language-modeling.ipynb
+++ b/TP1/lab-language-modeling.ipynb
@@ -601,7 +601,7 @@
    "source": [
     "**Cell F Q2: What do you expect the following probabilities to be? Why?**\n",
     "\n",
-    "1. I expect P(\\<eos\\>|.) to be 1, since a period is always followed by an end of sentence token, (e.g. all sentences end with a period).\n",
+    "1. I expect P(\\<eos\\>|\".\") to be 1, since a period is always followed by an end of sentence token, (e.g. all sentences end with a period).\n",
     "2. I expect P(\\<eos\\>|\\<bos\\>) to be 0, since a beginning of sentence token is never followed by an end of sentence token. This would mean that we have an empty sentence (e.g. \\<bos\\>\\<eos\\>).\n"
    ]
   },
@@ -962,7 +962,7 @@
     "In the plot we can see that two distinct trends:\n",
     "\n",
     "- For small n, the ngram assumption is justified: the n-grams are more frequent and are able to capture more information\n",
-    "- For large n, the ngram assumption is not justified: the frequency of n-grams decreases rapidly, leading to data sparsity. This sparsity makes it difficult to estimate reliable probabilities, as many higher-order n-grams appear rarely or not at all in the dataset.\n"
+    "- For large n, the ngram assumption is not justified: the frequency of n-grams decreases rapidly, leading to data sparsity. This sparsity makes it difficult to estimate reliable probabilities, as many higher-order n-grams appear rarely or not at all in the dataset\n"
    ]
   },
   {
@@ -1281,10 +1281,10 @@
    "source": [
     "**Cell M Q9: What do you notice?**\n",
     "\n",
-    "The perplexity of the model is similar for the text, the dev and the test sets.\n",
+    "The perplexity of the model is similar for the train, the dev and the test sets.\n",
     "This means that the model generalizes well to unseen data and did not overfit the training data.\n",
     "\n",
-    "However, the perplexity of the model is higher for the gen set.\n"
+    "However, the perplexity of the model is higher for the gen set, meaning the model doesn't generalize perfectly.\n"
    ]
   },
   {
@@ -2125,7 +2125,7 @@
    "source": [
     "**Cell T Q15: What do you notice? Is there a phrase that describes this mismatch between distributions?**\n",
     "\n",
-    "In all the cases, the perplexity is higher for the gen set (the mean of the perplexity is always higher for the gen set than for the test set).\n",
+    "In all the cases, the perplexity is higher for the gen set (in the plot the mean of the perplexity distribution is always higher for the gen set than for the test set).\n",
     "\n",
     "We can see that both of the RNN models are able to reduce the perplexity on the test set, but not on the gen set. This is an example of **distribution shift**, where the test set is drawn from a similar distribution as the training set, while the gen set is drawn from a different distribution.\n",
     "\n",
