TP2 removed code comment

--- a/TP2/Relation_Classification_Lab.ipynb
+++ b/TP2/Relation_Classification_Lab.ipynb
@@ -627,7 +627,13 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "  Processing <Ashok_Kumar__u0028_Indian_politician_u0029_> 0\n",
+            "  Processing <Ashok_Kumar__u0028_Indian_politician_u0029_> 0\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
             "  Processing <Ashok_Kumar__u0028_golfer_u0029_> 1\n",
             "  Processing <Ashok_Kumar_Dogra> 2\n",
             "  Processing <Ashok_Kumar> 3\n",
@@ -1041,7 +1047,7 @@
             "  Processing <Friday_the_13th__u0028_1916_film_u0029_> 398\n",
             "  Processing <Friday_the_13th__u0028_2009_film_u0029_> 399\n",
             "done\n",
-            "execution time:  240.60597395896912\n",
+            "execution time:  234.24585580825806\n",
             "number of articles:  399\n"
           ]
         }
@@ -1050,7 +1056,6 @@
         "def run():\n",
         "    relations = sorted(get_all_relations(\"student-gold-standard.tsv\"))\n",
         "    trie = construct_trie(relations, tokenizer)  # function to complete\n",
-        "    # cleaned_relations = [re.sub(r\"<|>\", \"\", relation) for relation in relations]\n",
         "\n",
         "    try:\n",
         "        os.remove(\"results.tsv\")\n",
