--- a/TP3/parsing.ipynb
+++ b/TP3/parsing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "ccfb45e4-daa5-4616-84b0-6f129ebe79fa",
    "metadata": {},
    "outputs": [
@@ -21,7 +21,7 @@
        "True"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "796524b2-2fae-4e7a-b926-815522ddc80f",
    "metadata": {},
    "outputs": [
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "204952a4-b819-4c60-8ea9-d34aee8bd6dd",
    "metadata": {},
    "outputs": [],
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "4de2ba2f-a525-46e4-a65a-1e70f284b378",
    "metadata": {},
    "outputs": [],
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "dc470a0d-5c41-4bbd-a6a6-fc51a4b5949b",
    "metadata": {},
    "outputs": [],
@@ -398,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "d3f8ead5-3a39-4b82-aa77-3deac827a522",
    "metadata": {},
    "outputs": [],
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "f61d6167-5e8b-499e-8348-d3e7bd02c2bc",
    "metadata": {},
    "outputs": [],
@@ -483,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "37c242ba-843b-4a40-b53a-5eecc5df418a",
    "metadata": {},
    "outputs": [],
@@ -541,7 +541,6 @@
     "            tokenizer=self.tokenizer,\n",
     "            device=\"cuda\" if torch.cuda.is_available() else \"cpu\",\n",
     "        )\n",
-    "\n",
     "        generation_args = {\n",
     "            \"max_new_tokens\": self.max_tokens,\n",
     "            \"return_full_text\": False,\n",
@@ -551,6 +550,7 @@
     "            \"pad_token_id\": self.tokenizer.eos_token_id,\n",
     "        }\n",
     "\n",
+    "        # for each prompt calculate the flops and sum them\n",
     "        total_flops = 0\n",
     "        output = []\n",
     "        for prompt in prompts:\n",
@@ -559,10 +559,12 @@
     "            generated_text = pipe(prompt, **generation_args)[0][\"generated_text\"]\n",
     "            output.append({\"prompt\": prompt, \"lm_output\": generated_text})\n",
     "\n",
-    "        # average flops per sentence\n",
-    "        avg_flops = total_flops / len(prompts)\n",
-    "        avg_prompt_length = sum(len(x) for x in prompts) / len(prompts)\n",
-    "        return output, avg_flops, avg_prompt_length\n",
+    "        # average flops and token length per prompt\n",
+    "        avg_prompt_flops = total_flops / len(prompts)\n",
+    "        avg_prompt_token_length = sum(\n",
+    "            len(self.tokenizer(x).input_ids) for x in prompts\n",
+    "        ) / len(prompts)\n",
+    "        return output, avg_prompt_flops, avg_prompt_token_length\n",
     "\n",
     "    def make_prompt(self, input_string):\n",
     "        samples = self.retriever.get_samples(input_string, n=self.n_few_shot)\n",
@@ -582,19 +584,23 @@
     "        metrics = Metrics()\n",
     "        metrics.reset()\n",
     "        total_flops = 0\n",
-    "        total_prompt_length = 0\n",
+    "        total_prompt_token_length = 0\n",
     "        num_batches = len(data) // batch_size\n",
     "        for position in tqdm(range(0, len(data), batch_size)):\n",
+    "            # chunk is a list of tuples (input_seq, action_seq, tree)\n",
     "            chunk = data[position : position + batch_size]\n",
     "            assert len(chunk) > 0\n",
-    "            # chunk is a list of tuples (input_seq, action_seq, tree)\n",
-    "            avg_flops, avg_sentence_length = self.eval_step(chunk, metrics)\n",
-    "            total_flops += avg_flops\n",
-    "            total_prompt_length += avg_sentence_length\n",
     "\n",
-    "        avg_flops_per_sentence = total_flops / num_batches\n",
-    "        avg_prompt_length = total_prompt_length / num_batches\n",
-    "        return metrics.get_metrics(), avg_flops_per_sentence, avg_prompt_length\n",
+    "            # gets the flops and prompt length for the batch (chunk)\n",
+    "            avg_flops, avg_prompt_token_length = self.eval_step(chunk, metrics)\n",
+    "            total_flops += avg_flops\n",
+    "            total_prompt_token_length += avg_prompt_token_length\n",
+    "\n",
+    "        return (\n",
+    "            metrics.get_metrics(),\n",
+    "            total_flops / num_batches,\n",
+    "            total_prompt_token_length / num_batches,\n",
+    "        )\n",
     "\n",
     "    def eval_variable_size(self, data, batch_size=16):\n",
     "        metrics = Metrics()\n",
@@ -602,27 +608,34 @@
     "        position = 0\n",
     "        terminate = False\n",
     "        total_flops = 0\n",
-    "        total_prompt_length = 0\n",
+    "        total_prompt_token_length = 0\n",
     "\n",
     "        while (position < len(data)) and (not terminate):\n",
+    "            # chunk is a list of tuples (input_seq, action_seq, tree)\n",
     "            chunk = data[position : position + batch_size]\n",
     "            assert len(chunk) > 0\n",
-    "            # chunk is a list of tuples (input_seq, action_seq, tree)\n",
-    "            avg_flops, avg_sentence_length = self.eval_step(chunk, metrics)\n",
+    "\n",
+    "            # gets the flops and prompt length for the batch (chunk)\n",
+    "            avg_flops, avg_prompt_token_length = self.eval_step(chunk, metrics)\n",
     "            total_flops += avg_flops\n",
-    "            total_prompt_length += avg_sentence_length\n",
+    "            total_prompt_token_length += avg_prompt_token_length\n",
+    "\n",
     "            position += batch_size\n",
     "            terminate = valid_estimate(metrics.edit_distance)\n",
-    "        avg_flops_per_sentence = total_flops / (position / batch_size)\n",
-    "        avg_prompt_length = total_prompt_length / (position / batch_size)\n",
-    "        return metrics.get_metrics(), avg_flops_per_sentence, avg_prompt_length\n",
+    "\n",
+    "        num_batches = position / batch_size\n",
+    "        return (\n",
+    "            metrics.get_metrics(),\n",
+    "            total_flops / num_batches,\n",
+    "            total_prompt_token_length / num_batches,\n",
+    "        )\n",
     "\n",
     "    def eval_step(self, chunk, metrics):\n",
     "        # chunk is a list of tuples (input_seq, action_seq, tree)\n",
     "        sentences = [\n",
     "            \" \".join(x[0]) for x in chunk\n",
     "        ]  # this is a very basic form of detokenization\n",
-    "        y, avg_flops, avg_prompt_length = self.generate(sentences)\n",
+    "        y, avg_flops, avg_prompt_token_length = self.generate(sentences)\n",
     "        generated_sequences = [x[\"lm_output\"].split() for x in y]\n",
     "        metrics.record_sequences(generated_sequences, [x[1] for x in chunk])\n",
     "        trees = []\n",
@@ -637,12 +650,12 @@
     "\n",
     "        # returns the average number of flops per sentence and the average prompt length,\n",
     "        # calculated over the batch (chunk)\n",
-    "        return avg_flops, avg_prompt_length"
+    "        return avg_flops, avg_prompt_token_length"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "22357cda-b2a0-409c-a1a9-dc37314dbef3",
    "metadata": {},
    "outputs": [
@@ -689,8 +702,8 @@
       "      \"edit distance\": 16\n",
       "    }\n",
       "  },\n",
-      "  \"flops_per_sentence (GFLOPs)\": 94.94730021675,\n",
-      "  \"average_sentence_length (with 0-shot)\": 121.0\n",
+      "  \"flops per prompt (GFLOPs)\": 94.94730021675,\n",
+      "  \"average prompt length (tokens) (with 0-shot)\": 30.75\n",
       "}\n",
       "\n",
       "=== 1-Shot ===\n",
@@ -716,8 +729,8 @@
       "      \"edit distance\": 48\n",
       "    }\n",
       "  },\n",
-      "  \"flops_per_sentence (GFLOPs)\": 856.7764598296459,\n",
-      "  \"average_sentence_length (with 1-shot)\": 986.3958333333334\n",
+      "  \"flops per prompt (GFLOPs)\": 856.7764598296459,\n",
+      "  \"average prompt length (tokens) (with 1-shot)\": 277.4791666666667\n",
       "}\n",
       "\n",
       "=== 2-Shot ===\n",
@@ -743,8 +756,8 @@
       "      \"edit distance\": 16\n",
       "    }\n",
       "  },\n",
-      "  \"flops_per_sentence (GFLOPs)\": 1662.1552556038125,\n",
-      "  \"average_sentence_length (with 2-shot)\": 1899.0625\n",
+      "  \"flops per prompt (GFLOPs)\": 1662.1552556038125,\n",
+      "  \"average prompt length (tokens) (with 2-shot)\": 538.3125\n",
       "}\n",
       "\n",
       "=== 4-Shot ===\n",
@@ -770,8 +783,8 @@
       "      \"edit distance\": 16\n",
       "    }\n",
       "  },\n",
-      "  \"flops_per_sentence (GFLOPs)\": 3040.240714219625,\n",
-      "  \"average_sentence_length (with 4-shot)\": 3448.9375\n",
+      "  \"flops per prompt (GFLOPs)\": 3040.240714219625,\n",
+      "  \"average prompt length (tokens) (with 4-shot)\": 984.625\n",
       "}\n",
       "\n",
       "=== 8-Shot ===\n",
@@ -797,8 +810,8 @@
       "      \"edit distance\": 16\n",
       "    }\n",
       "  },\n",
-      "  \"flops_per_sentence (GFLOPs)\": 6027.797216786687,\n",
-      "  \"average_sentence_length (with 8-shot)\": 6833.375\n",
+      "  \"flops per prompt (GFLOPs)\": 6027.797216786687,\n",
+      "  \"average prompt length (tokens) (with 8-shot)\": 1952.1875\n",
       "}\n",
       "\n",
       "=== 16-Shot ===\n",
@@ -824,8 +837,8 @@
       "      \"edit distance\": 32\n",
       "    }\n",
       "  },\n",
-      "  \"flops_per_sentence (GFLOPs)\": 12457.190178450937,\n",
-      "  \"average_sentence_length (with 16-shot)\": 14069.5625\n",
+      "  \"flops per prompt (GFLOPs)\": 12457.190178450937,\n",
+      "  \"average prompt length (tokens) (with 16-shot)\": 4034.4375\n",
       "}\n",
       "\n",
       "=== Evaluating Model: deepseek-ai/DeepSeek-R1-Distill-Qwen-1.5B ===\n",
@@ -869,8 +882,8 @@
       "      \"edit distance\": 16\n",
       "    }\n",
       "  },\n",
-      "  \"flops_per_sentence (GFLOPs)\": 98.03501444975,\n",
-      "  \"average_sentence_length (with 0-shot)\": 121.0\n",
+      "  \"flops per prompt (GFLOPs)\": 98.03501444975,\n",
+      "  \"average prompt length (tokens) (with 0-shot)\": 31.75\n",
       "}\n",
       "\n",
       "=== 1-Shot ===\n",
@@ -896,8 +909,8 @@
       "      \"edit distance\": 32\n",
       "    }\n",
       "  },\n",
-      "  \"flops_per_sentence (GFLOPs)\": 837.156608974125,\n",
-      "  \"average_sentence_length (with 1-shot)\": 962.4375\n",
+      "  \"flops per prompt (GFLOPs)\": 837.156608974125,\n",
+      "  \"average prompt length (tokens) (with 1-shot)\": 271.125\n",
       "}\n",
       "\n",
       "=== 2-Shot ===\n",
@@ -923,8 +936,8 @@
       "      \"edit distance\": 48\n",
       "    }\n",
       "  },\n",
-      "  \"flops_per_sentence (GFLOPs)\": 1617.962345644,\n",
-      "  \"average_sentence_length (with 2-shot)\": 1842.875\n",
+      "  \"flops per prompt (GFLOPs)\": 1617.962345644,\n",
+      "  \"average prompt length (tokens) (with 2-shot)\": 524.0\n",
       "}\n",
       "\n",
       "=== 4-Shot ===\n",
@@ -950,8 +963,8 @@
       "      \"edit distance\": 16\n",
       "    }\n",
       "  },\n",
-      "  \"flops_per_sentence (GFLOPs)\": 3043.328428452625,\n",
-      "  \"average_sentence_length (with 4-shot)\": 3448.9375\n",
+      "  \"flops per prompt (GFLOPs)\": 3043.328428452625,\n",
+      "  \"average prompt length (tokens) (with 4-shot)\": 985.625\n",
       "}\n",
       "\n",
       "=== 8-Shot ===\n",
@@ -977,8 +990,8 @@
       "      \"edit distance\": 48\n",
       "    }\n",
       "  },\n",
-      "  \"flops_per_sentence (GFLOPs)\": 6096.6275132306455,\n",
-      "  \"average_sentence_length (with 8-shot)\": 6907.25\n",
+      "  \"flops per prompt (GFLOPs)\": 6096.6275132306455,\n",
+      "  \"average prompt length (tokens) (with 8-shot)\": 1974.4791666666667\n",
       "}\n",
       "\n",
       "=== 16-Shot ===\n",
@@ -1004,8 +1017,8 @@
       "      \"edit distance\": 32\n",
       "    }\n",
       "  },\n",
-      "  \"flops_per_sentence (GFLOPs)\": 12460.277892683938,\n",
-      "  \"average_sentence_length (with 16-shot)\": 14069.5625\n",
+      "  \"flops per prompt (GFLOPs)\": 12460.277892683938,\n",
+      "  \"average prompt length (tokens) (with 16-shot)\": 4035.4375\n",
       "}\n",
       "\n",
       "=== Evaluating Model: HuggingFaceTB/SmolLM-135M ===\n",
@@ -1033,8 +1046,8 @@
       "      \"edit distance\": 16\n",
       "    }\n",
       "  },\n",
-      "  \"flops_per_sentence (GFLOPs)\": 8.67995793525,\n",
-      "  \"average_sentence_length (with 0-shot)\": 121.0\n",
+      "  \"flops per prompt (GFLOPs)\": 8.67995793525,\n",
+      "  \"average prompt length (tokens) (with 0-shot)\": 32.25\n",
       "}\n",
       "\n",
       "=== 1-Shot ===\n",
@@ -1060,8 +1073,8 @@
       "      \"edit distance\": 32\n",
       "    }\n",
       "  },\n",
-      "  \"flops_per_sentence (GFLOPs)\": 96.9426612834375,\n",
-      "  \"average_sentence_length (with 1-shot)\": 962.4375\n",
+      "  \"flops per prompt (GFLOPs)\": 96.9426612834375,\n",
+      "  \"average prompt length (tokens) (with 1-shot)\": 360.1875\n",
       "}\n",
       "\n",
       "=== 2-Shot ===\n",
@@ -1087,8 +1100,8 @@
       "      \"edit distance\": 32\n",
       "    }\n",
       "  },\n",
-      "  \"flops_per_sentence (GFLOPs)\": 192.32929351821875,\n",
-      "  \"average_sentence_length (with 2-shot)\": 1863.75\n",
+      "  \"flops per prompt (GFLOPs)\": 192.32929351821875,\n",
+      "  \"average prompt length (tokens) (with 2-shot)\": 714.59375\n",
       "}\n",
       "\n",
       "=== 4-Shot ===\n"
@@ -1127,8 +1140,8 @@
       "      \"edit distance\": 32\n",
       "    }\n",
       "  },\n",
-      "  \"flops_per_sentence (GFLOPs)\": 372.95915983284374,\n",
-      "  \"average_sentence_length (with 4-shot)\": 3565.0625\n",
+      "  \"flops per prompt (GFLOPs)\": 372.95915983284374,\n",
+      "  \"average prompt length (tokens) (with 4-shot)\": 1385.71875\n",
       "}\n",
       "\n",
       "=== 8-Shot ===\n",
@@ -1154,8 +1167,8 @@
       "      \"edit distance\": 32\n",
       "    }\n",
       "  },\n",
-      "  \"flops_per_sentence (GFLOPs)\": 739.3578777628124,\n",
-      "  \"average_sentence_length (with 8-shot)\": 7027.8125\n",
+      "  \"flops per prompt (GFLOPs)\": 739.3578777628124,\n",
+      "  \"average prompt length (tokens) (with 8-shot)\": 2747.0625\n",
       "}\n",
       "\n",
       "=== 16-Shot ===\n",
@@ -1181,8 +1194,8 @@
       "      \"edit distance\": 16\n",
       "    }\n",
       "  },\n",
-      "  \"flops_per_sentence (GFLOPs)\": 1449.41257016425,\n",
-      "  \"average_sentence_length (with 16-shot)\": 13706.3125\n",
+      "  \"flops per prompt (GFLOPs)\": 1449.41257016425,\n",
+      "  \"average prompt length (tokens) (with 16-shot)\": 5385.25\n",
       "}\n"
      ]
     }
@@ -1205,15 +1218,17 @@
     "\n",
     "        llm_parser = LLMParser(model_name, retriever)\n",
     "        llm_parser.n_few_shot = n_few_shot\n",
-    "        metrics, avg_flops_per_sentence, avg_sentence_length = llm_parser.eval(\n",
+    "        # gets the metrics, the average flops performed per prompt, and the average prompt length in tokens\n",
+    "        metrics, avg_flops_per_prompt, avg_prompt_length = llm_parser.eval(\n",
     "            data[\"test\"], variable_size=True\n",
     "        )\n",
     "\n",
     "        results = {\n",
     "            \"metrics\": metrics,\n",
-    "            \"flops_per_sentence (GFLOPs)\": avg_flops_per_sentence / 1e9,\n",
-    "            f\"average_sentence_length (with {n_few_shot}-shot)\": avg_sentence_length,\n",
+    "            \"flops per prompt (GFLOPs)\": avg_flops_per_prompt / 1e9,\n",
+    "            f\"average prompt length (tokens) (with {n_few_shot}-shot)\": avg_prompt_length,\n",
     "        }\n",
+    "\n",
     "        print(json.dumps(results, indent=2))"
    ]
   }
